# fakenews

./: .gitignore  README.md  pyproject.toml
docs/: docs.md
fakenews/: prompts.py  read_data.py  train.py
notebooks/: 00_sandbox.ipynb  03_fake_recogna.ipynb  03_fake_recogna_eda.ipynb  04_factk_br.ipynb  05_fake_recogna_train.ipynb  06_fakepedia_eda.ipynb  07_fakebr_train.ipynb  08_faketrue_br.ipynb  09_gpt.ipynb
reports/llms_evals/: first_10_cot.csv  first_10_cot_few_shot.csv  first_10_few_shot.csv
reports/model_eval/: fake_recogna_eval.json  fakebr_eval.json  faketrue_br.json
